# -pjreddie-vision-hw

./: .gitignore
vision-hw0/: CMakeLists.txt
vision-hw0/src/: process_image.c
vision-hw1/: CMakeLists.txt  Makefile  uwimg.py
vision-hw1/src/: filter_image.c  process_image.c  stb_image.h  stb_image_write.h
vision-hw2/: CMakeLists.txt  Makefile  trypanorama.py  uwimg.py
vision-hw2/src/: filter_image.c  harris_image.c  image.h  panorama_image.c  process_image.c  test.c
vision-hw3/: CMakeLists.txt  Makefile  uwimg.py
vision-hw3/src/: filter_image.c  flow_image.c  image.h  test.c
vision-hw4/: .gitignore  CMakeLists.txt  Makefile  cifar.test  tryml.py
vision-hw4/src/: classifier.c  classifier.h  filter_image.c  harris_image.c  image.h  load_image.c  matrix.c  resize_image.c  test.c
vision-hw5/: .gitignore  dataloader.py  main.py  models.py  plot_progress.py  showimage.py
vision-hw5/Report/: BoringNet (non RELU).txt  CoolNet (0.0001 lr).txt  CoolNet (0.01 lr).txt  CoolNet (100 epochs 2 batchSize).txt  Report.md
vision-hw5/Report/logs/: BoringNet (RELU).txt  CoolNet (0.1 lr).txt  CoolNet (10 lr).txt  CoolNet (150 epochs 0.01 lr -10%per50).txt  CoolNet (200 epoch 0.01 lr).txt  CoolNet (200 epochs softmax).txt  CoolNet (25 epochs 8 batchSize).txt  CoolNet (33 epochs log softmax nll).txt  CoolNet (40 epochs softmax nll).txt  CoolNet (5 epochs 40 batchSize).txt  CoolNet (augmented).txt  CoolNet.txt  lazynet (RELU).txt
